kubernetes/rtmp-hdw-k8s.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: rtmp-tv
  name: rtmp-tv-deployment
  namespace: rtmp
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: rtmp-tv
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: rtmp-tv
    spec:
      containers:
      - env:
        - name: TARGET
          valueFrom:
            configMapKeyRef:
              key: TARGET
              name: rtmp-tv-config
        - name: KEY
          valueFrom:
            configMapKeyRef:
              key: KEY
              name: rtmp-tv-config
        image: peuserik/hdw-rtmp
        imagePullPolicy: Always
        name: hdw-rtmp
        ports:
        - containerPort: 1935
          name: rtmp
        - containerPort: 80
          name: http
        - containerPort: 443
          name: https
        - containerPort: 8080
          name: health
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
        readinessProbe:
          httpGet:
            path: /readyz
            port: 8080
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: rtmp-tv-service
  namespace: rtmp
  labels:
    app: rtmp-tv
spec:
  type: LoadBalancer # use NodePort for our providers
  externalTrafficPolicy: Cluster
#  loadBalancerIP: $(staticIP-from-gce)
  ports:
  - name: rtmp-input
    port: 1935
    targetPort: 1935
    protocol: TCP
  - name: http-port
    port: 80
    protocol: TCP
  - name: https-port
    port: 443
    protocol: TCP
  - name: healthz
    port: 8080
    protocol: TCP
  selector:
    app: rtmp-tv
