kubernetes/rtmp-hdw-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: rtmp-tv
  name: rtmp-tv-service
spec:
  externalTrafficPolicy: Cluster
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  - name: rtmp
    port: 1935
    protocol: TCP
    targetPort: 1935
  - name: https
    port: 443
    protocol: TCP
    targetPort: 443
  selector:
    app: rtmp-tv
  sessionAffinity: None
  type: LoadBalancer
status:
  loadBalancer: {}
